--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,24 @@
         android:layout_height="match_parent">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
-            tools:listitem="@layout/activity_main2"
+            tools:listitem="@layout/view"
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-        <Button
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnPlus"
+            android:layout_gravity="end|bottom"
+            android:backgroundTint="#385368"
+            app:cornerRadius="60dp"
+            android:text="+"
+            android:textSize="50sp"
+            android:textColor="#FFFFFF"
+            android:fontFamily="@font/gilroy_medium"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="30dp"
             android:layout_width="70dp"
-            android:layout_height="80dp"/>
+            android:layout_height="80dp" />
     </FrameLayout>
 
 
