--- a/app/src/main/res/layout/view.xml
+++ b/app/src/main/res/layout/view.xml
@@ -18,7 +18,7 @@
             android:orientation="vertical"
             android:padding="10dp">
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/nomi"
                 android:layout_marginLeft="18dp"
                 android:layout_marginTop="-5dp"
                 android:layout_width="match_parent"
