--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -53,6 +53,7 @@
         android:layout_height="wrap_content">
     </RadioButton>
     <Button
+        android:id="@+id/btnSave"
         android:layout_width="190dp"
         android:layout_height="55dp"
         android:backgroundTint="#90CAF9"
